@@ -245,6 +245,17 @@ public class SleepUtils
      return (SleepClosure)script.getScriptEnvironment().getFunction(value.toString());
    }
 
+   /** creates an IO handle scalar suitable for use with the sleep IO API.  The passed in
+       streams can each be null if necessary. */ 
+   public static Scalar getIOHandleScalar(InputStream in, OutputStream out)
+   {
+      sleep.bridges.io.IOObject handle = new sleep.bridges.io.IOObject();
+      handle.openRead(in);
+      handle.openWrite(out);
+
+      return SleepUtils.getScalar(handle);
+   }
+
    /** returns an empty hashmap scalar */
    public static Scalar getHashScalar()
    {
